css/hero.css
:root {
    --white: #fff;
    --fonts--heading: Staatliches, sans-serif;
    --heading: #000;
    --fonts--paragraph: "Nunito Sans", sans-serif;
    --paragraph: #292929;
    --primary: #3357f5;
    --heading-2: #fff;
    --secondary: #000;
    --border: #e0e0e0;
    --paragraph-2: #e9e9e9;
    --transparent: #fff0;
    --black: #000;
    --border-2: #686868;
    --radius--border-lg\<deleted\|variable-eebc7a93-a3cc-d2bd-9fc5-b35f36b43ad0\>: 20px;
    --box-shadow: #00000012;
    --radius--border-full\<deleted\|variable-4b582b38-c151-4927-adc3-555ab492c638\>: 200px;
    --extra-color: #f8f8f8;
    --fonts--icons: "Material Icons", sans-serif
}

.hero-section {
    display: flex;
    justify-content: center;
    min-height: calc(100dvh - 98px);
    padding-top: 0
}

.hero-container {
    display: grid;
    grid-template-areas:
        'heading social'
        'description social';
    align-items: center;
    grid-template-rows: 1fr 1fr;
    height: 100%;
    gap: 1rem;
}

.hero-container > div:nth-child(1) {
    grid-area: heading;
    align-self: end;
}

.hero-container > div:nth-child(2) {
    grid-area: description;
    align-self: start;
}

.hero-container > div:nth-child(3) {
    grid-area: social;
}

@media screen and (max-width: 767px) {
    .hero-container {
        display: grid;
        grid-template-areas:
            'heading social'
            'description description';
        gap: 0;

    }
}

.hero-center-content {
    display: flex;
    flex-direction: column;
    justify-content: flex-end;
    gap: 1rem;
}

.hero-center-content .hero-center1 h3 {
    font-size: 1rem;
    margin: 0;
}

.hero-center-content .hero-center2 h3 {
    font-size: 1rem;
    margin: 0;
}

.hero-heading h1 {
    max-width: 10ch;
    line-height: 100px;
}

.hero-description {
    max-width: 50ch;
}

.hero-social {
    display: flex;
    flex-direction: column;
    align-items: flex-end;

    gap: .6rem;

}

.hero-social-icon {
    position: relative;
    display: grid;
    align-items: center;
    justify-content: center;
    width: 1.4rem;
}

.hero-social-icon::before {
    content: '';
    position: absolute;
    inset: 0;
    aspect-ratio: 1;
    background-color: var(--primary);

    border-radius: 50%;
    transform: scale(0);
    transform-origin: center;
    transition: transform 200ms ease-in-out;
    z-index: -1;
}

.hero-social-icon:hover::before {
    transform: scale(1.4);
}

.hero-social-icon:hover svg {
    fill: var(--white);
}

.hero-social-icon svg {
    width: 1rem;
    height: 1rem;
}

.hero-quote {
    display: flex;
    align-items: center;
    gap: .4rem;
    position: relative;
}

.hero-quote svg {
    width: .6rem;
    fill: var(--primary);
    transform: rotate(90deg);
    transition: transform 200ms ease;
}

.hero-quote:hover svg {
    transform: rotate(45deg);
}



/* Gradient BG */
:root {
    --color1: 18, 113, 255;
    --color2: 221, 74, 255;
    --color3: 100, 220, 255;
    --color4: 200, 50, 50;
    --color5: 180, 180, 50;
    --blending: hard-light;
    --circle-size: clamp(20%, 60%, 100%);
}

.gradient-bg {
    overflow: hidden;
    position: absolute;
    width: 100vw;
    height: 100vh;

    filter: blur(40px);
    filter: url(#goo) blur(40px);

    top: 0;
    left: 0;

    z-index: -999;
}

.gradient-bg svg {
    display: none;
}

.gradient-bg .g1 {
    position: absolute;
    background: radial-gradient(circle at center, rgba(var(--color1), 0.8) 0, rgba(var(--color1), 0) 50%) no-repeat;
    mix-blend-mode: var(--blending);

    border-radius: 50%;

    top: calc(50% - 48vh);
    left: calc(50% - 12vw);

    /* transform-origin: center center;
    animation: moveVertical 30s ease infinite; */

    width: var(--circle-size);
    height: var(--circle-size);

    transform-origin: calc(50% - 80px);
    animation: moveInCircle 40s ease infinite;

    opacity: 1;
}

.gradient-bg .g2 {
    position: absolute;
    background: radial-gradient(circle at center, rgba(var(--color2), 0.8) 0, rgba(var(--color2), 0) 50%) no-repeat;
    mix-blend-mode: var(--blending);

    border-radius: 50%;

    top: calc(50% - 28vh);
    left: calc(50% - 12vw);

    transform-origin: calc(50% - 200px);
    animation: moveVertical 40s ease infinite;

    width: var(--circle-size);
    height: var(--circle-size);

    opacity: 1;
}

.gradient-bg .g3 {
    position: absolute;
    background: radial-gradient(circle at center, rgba(var(--color3), 0.8) 0, rgba(var(--color4), 0) 50%) no-repeat;
    mix-blend-mode: var(--blending);

    border-radius: 50%;

    top: calc(50% - 34vh);
    left: calc(50% - 20vw);

    transform-origin: calc(50% - 200px);
    animation: moveHorizontal 30s ease infinite;

    width: var(--circle-size);
    height: var(--circle-size);

    opacity: 1;
}

@media screen and (max-width: 767px) {
    :root {
        --circle-size: clamp(20%, 100%, 100%);
    }

    .gradient-bg .g1 {
        top: calc(50% - var(--circle-size) / 2 + 18vh);
        left: calc(50% - var(--circle-size) / 2);
    }

    .gradient-bg .g2 {
        top: calc(50% - var(--circle-size) / 2 + 32vh);
        left: calc(50% - var(--circle-size) / 2);
    }

    .gradient-bg .g3 {
        top: calc(50% - var(--circle-size) / 2 + 34vh);
        left: calc(50% - var(--circle-size) / 2 - 14vw);
    }

}


@keyframes moveInCircle {
    0% {
        transform: rotate(0deg);
    }

    50% {
        transform: rotate(120deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

@keyframes moveVertical {
    0% {
        transform: translateY(-10%)
    }

    50% {
        transform: translateY(10%)
    }

    100% {
        transform: translateY(-10%)
    }
}

@keyframes moveHorizontal {
    0% {
        transform: translateX(-10%) translateY(-10%);
    }

    50% {
        transform: translateX(10%) translateY(10%);
    }

    100% {
        transform: translateX(-10%) translateY(-10%);
    }
}

